feat(app) creacion de portafolio e inicio de modificacion de app

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -7,16 +7,59 @@
   min-height: 100vh;
 }
 
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
+.sol{
+  border-radius: 50%;
+  height: 150px;
+  width: 150px;
+  transform-style: preserve-3d;
+
+  animation: rotate 10s linear infinite;
+  background-color: #fbff05;
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-shadow: 0 0 60px rgba(255, 160, 60, 0.4);
+  z-index: 0;
 }
+
+.orbita{
+  position: fixed ;
+  justify-content: center;
+  align-items: center;
+  width: 20%;
+  height: 40%;
+  border-radius: 50%;
+  transform-style: preserve-3d;
+  animation-name: orbit;
+  animation: forwards 10s linear infinite;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  z-index: 1;
+}
+
+/*.orbita0{ width: 300px;  height: 300px; background-color: rgb(255, 0, 0);}
+.orbita1{ width: 400px;  height: 400px; }
+.orbita2{ width: 500px;  height: 500px; }
+.orbita3{ width: 600px;  height: 600px; }
+.orbita4{ width: 700px;  height: 700px; }
+.orbita5{ width: 800px;  height: 800px; }
+.orbita6{ width: 900px;  height: 900px; }
+.orbita7{ width: 1000px;  height: 1000px; }
+*/
+
+
+.orbita .orbita {
+  animation-name: suborbita; }
+
+@keyframes orbita {
+  0% {
+    transform: rotateZ(0deg); }
+
+  100% {
+    transform: rotateZ(-360deg); } }
+
+
 
 .description a {
   display: flex;
@@ -82,7 +125,7 @@
 }
 
 .center::before {
-  background: var(--secondary-glow);
+  /*background: var(--secondary-glow);*/
   border-radius: 50%;
   width: 480px;
   height: 360px;
@@ -90,7 +133,7 @@
 }
 
 .center::after {
-  background: var(--primary-glow);
+  /*background: var(--primary-glow);*/
   width: 240px;
   height: 180px;
   z-index: -1;
@@ -126,8 +169,27 @@
   }
 }
 
+
+
 /* Mobile */
 @media (max-width: 700px) {
+
+  .orbita{
+    position: fixed ;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: 40%;
+    border-radius: 50%;
+    transform-style: preserve-3d;
+    animation-name: orbit;
+    animation: forwards 10s linear infinite;
+    background-color: transparent;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    z-index: 1;
+  }
   .content {
     padding: 4rem;
   }
