--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -13,12 +13,8 @@
   align-items: center;
   position: relative;
   padding: 4rem 0;
-
 }
 
-.soles{
-  display: absolute;
-}
 .solContainer{
   top: -20%;
   position: absolute;
@@ -40,6 +36,7 @@
   box-shadow: inset 0 0 60px rgba(255, 161, 60, 0.534);
   overflow: hidden;
   z-index: 5;
+  transform: translate(-50% -50%);
 }
 
 .solBottom{
@@ -54,22 +51,26 @@
   box-shadow: inset 0 0 60px rgba(255, 161, 60, 0.5), 0 0 60px rgba(255, 160, 60, 0.4);
   overflow: hidden;
   z-index: 0;
+  transform: translate(-50% -50%);
 }
 
+.ContainerOrbitaPlanetas{
+  /*position: relative;*/
+  transform: rotateX(60deg);
+  transform-style: preserve-3d;
+  perspective: 1000px;
 
+}
+/*
 .orbita{
   position: fixed ;
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  transform-style: preserve-3d;
-  animation-name: orbit;
-  animation: forwards 10s linear infinite;
   background-color: transparent;
   background-repeat: no-repeat;
   background-size: cover;
   border: 5px solid rgba(255, 255, 255, 0.2);
-  transform: rotateX(60deg);
   z-index: 1;
 }
 
@@ -81,47 +82,105 @@
 .orbita5{ width: 75%;  height: 65%;  }
 .orbita6{ width: 85%;  height: 70%;  }
 .orbita7{ width: 95%;  height: 75%;  }
-
-@keyframes orbit {
-  from {
-    transform: rotateY(0deg);
+*/
+@keyframes rotate {
+  0% {
+    transform: translate(150px,0) rotate(0deg);
   }
-  to {
-    transform: rotateY(360deg);
+  100% {
+    transform: translate(150px,0) rotate(360deg);
   }
 }
 
-
+/*@keyframes rotate2 {
+  from  {
+    transform: rotate(0deg) translate3d(150px, 5px, 0) rotate(0deg) scaleX(1) scaleY(1)  rotateY(0deg);
+  }
+  to {
+    transform: rotate(360deg) translate3d(150px, 5px, 0) rotate(360deg) scaleX(1) scaleY(1)  rotateY(240deg);
+  }
+}
+*/
+@keyframes rotate2 {
+  from  {
+    transform: rotate(0deg) translate3d(20px, 240px, 0) rotate(0deg) scaleX(1) scaleY(0.5)  rotateY(0deg);
+  }
+  to {
+    transform: rotate(360deg) translate3d(20px, 240px, 0) rotate(360deg) scaleX(1) scaleY(0.5)  rotateY(240deg);
+  }
+}
 
 .planeta {
   position: absolute;
+  
   top: 50%;
-  left: 95%;
-  width: 30px;  
-  height: 50px;
+  left: 97%;
+  width: 20px;  
+  height: 20px;
   border-radius: 50%;
   z-index: 1;
-  background-color: aqua;
+  background-color: #D19861;
+  background-size: cover;
+  background-repeat:no-repeat ;
+  
+  /*animation-name: rotate;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+  animation-timing-function: cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  transform: 50% 50%;*/
 }
 
-
-/*.planeta0 {
-  top: 10%; 
-  left: 30%; 
-  background-color: aqua;
-}
 .planeta1 {
-  top: 20%; 
-  left: 50%; 
-  background-color: #fff;
+  left: 97%;
+  width: 22px;  
+  height: 47px;
+  background-image: url('https://img.freepik.com/fotos-premium/venus-superficie-textura-fondo-ia-generativa_889432-556.jpg') !important;
+  
+}
+.planeta2 {
+  left: 97%;
+  width: 25px;  
+  height: 50px;
+  background-image: url('https://thumbs.dreamstime.com/b/textura-de-la-tierra-del-planeta-14313107.jpg') !important;
+  animation: rotate2 5s  infinite;
+  
+  /*animation-name: rotate2;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+  animation-timing-function: cubic-bezier(0.445, 0.05, 0.50, 0.20);*/
+  z-index: 3  ;
 }
 
-.planeta2 {
-  top: 30%; 
-  left: 50%;
-  background-color: #fff;
- }*/
-
+.planeta3 {
+  left: 98%;
+  width: 20px;  
+  height: 45px;
+  background-image: url('https://img.freepik.com/foto-gratis/detalles-naranjas-concepto-textura-lunar_23-2149535802.jpg') !important;
+ }
+.planeta4 {
+  left: 95%;
+  width: 50px;  
+  height: 90px;
+  background-image: url('https://preview.free3d.com/img/2015/05/2145886254972011962/teiin5wu.jpg') !important;
+}
+ .planeta5 {
+  left: 97%;
+  width: 45px;  
+  height: 80px;
+  background-image: url('https://www.solarsystemscope.com/textures/download/8k_saturn.jpg') !important;
+}
+.planeta6 {
+  left: 97%;
+  width: 40px;  
+  height: 70px;
+  background-image: url('https://static.vecteezy.com/system/resources/previews/001/998/851/original/abstract-background-of-uranus-surface-free-vector.jpg') !important;
+}
+.planeta7 {
+  left: 98%;
+  width: 40px;  
+  height: 70px;
+  background-image: url('https://static.vecteezy.com/system/resources/previews/002/097/266/original/abstract-background-of-neptune-surface-free-vector.jpg') !important;
+}
 
 .description a {
   display: flex;
