rutas, splash screen y babel

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -7,6 +7,47 @@
   min-height: 100vh;
 }
 
+.clickMe{
+  position: absolute;
+  top: 70%;
+  left: 0;
+  color: rgba(255, 166, 0, 0.466);
+  background-color: transparent;
+  border: none !important;
+  padding: 1rem;
+  font-size: medium;
+  z-index: 7;
+  font-weight: bolder;
+  text-align: left;
+}
+
+.botonFlecha{
+  position: absolute;
+  top: 135%;
+  left: 47%;
+  background-color: #000;
+  border: none !important;
+  background-image: url("../../public/assets/angulo-pequeno-hacia-abajo.png") ;
+  width: 70px;
+  height: 70px;
+  z-index: 7;
+  background-repeat: no-repeat;
+  background-size: cover;
+  
+}
+
+.botonFlecha::placeholder{
+  background-color: #666060;
+}
+
+.titulo{
+  position: absolute;
+  color: #fff;
+  background-color: #fff;
+  top: 50%;
+  left: 80%;
+}
+
 .sistemaSolar{
   display: flex;
   justify-content: center;
@@ -48,7 +89,7 @@
   background-color: #fbff05;
   background-repeat: no-repeat;
   background-size: cover;
-  box-shadow: inset 0 0 60px rgba(255, 161, 60, 0.5), 0 0 60px rgba(255, 160, 60, 0.4);
+  box-shadow: inset 0 0 60px rgba(255, 161, 60, 0.637), 0 0 60px rgba(255, 160, 60, 0.4);
   overflow: hidden;
   z-index: 0;
   transform: translate(-50% -50%);
@@ -84,7 +125,6 @@
 .orbita7{ width: 95%;  height: 75%;  }
 */
 
-
 .description a {
   display: flex;
   justify-content: center;
@@ -118,7 +158,7 @@
   border-radius: var(--border-radius);
   background: rgba(var(--card-rgb), 0);
   border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
+  transition: border 200ms;
 }
 
 .card span {
@@ -272,7 +312,7 @@
       rgba(var(--callout-rgb), 0.5)
     );
     background-clip: padding-box;
-    backdrop-filter: blur(24px);
+    
   }
 
   .description div {
