--- a/styles/splash.module.css
+++ b/styles/splash.module.css
@@ -25,6 +25,8 @@
   position: absolute;
   top: 0;
   left: 0;
+  right: 0;
+  bottom: 0;
   --size:1px;
   width: var(--size);
   height: var(--size);
