--- a/styles/projects.module.css
+++ b/styles/projects.module.css
@@ -5,7 +5,12 @@
     right: 0;
     z-index: -1;
 }
+.title{
+    font-size: 3rem;
+    font-weight: 700;
+    margin-bottom: 8px;
 
+}
 .Container{
     width: 100%;
     height: 50%;
