--- a/styles/aboutme.module.css
+++ b/styles/aboutme.module.css
@@ -1,5 +1,5 @@
 .main{
-    background-color: #000;
+    background-color: transparent !important;
     position: absolute;
     top:0 ;
     left:0;
@@ -260,6 +260,11 @@
   
   /* Mobile */
   @media (max-width: 700px) {
+    .ContenedorContactos{
+      margin-bottom: 50%;
+      margin-top: 1%;
+      grid-template-columns: repeat(1, 100%);
+    }
     .imgContainer{
         margin-right: 10%;
     }
@@ -339,12 +344,32 @@
   }
   
   /* Tablet and Smaller Desktop */
-  @media (min-width: 701px) and (max-width: 1120px) {
+  @media (max-width: 701px){
     .grid {
       grid-template-columns: repeat(2, 50%);
     }
+    .grid2 {
+      grid-template-columns: repeat(1, 100%);
+    }
+    .ContenedorContactos{
+      margin-top: 1%;
+      margin-bottom: 50%;
+      grid-template-columns: repeat(1, 100%);
+    }
   }
-  
+  @media (max-width: 701px){
+    .grid {
+      grid-template-columns: repeat(2, 50%);
+    }
+    .grid2 {
+      grid-template-columns: repeat(1, 50%);
+    }
+    .ContenedorContactos{
+      margin-top: 1%;
+      margin-bottom: 50%;
+      grid-template-columns: repeat(1, 100%);
+    }
+  }
   @media (prefers-color-scheme: dark) {
     .vercelLogo {
       filter: invert(1);
@@ -364,3 +389,7 @@
     }
   }
   
+  .espacio{
+    height: 10px;
+    margin-bottom: 10%;
+  }
