--- a/styles/info.module.css
+++ b/styles/info.module.css
@@ -24,7 +24,25 @@
     margin-left: 10%;
     z-index: 3;
 }
+@media (max-width: 701px)  {
+    .Container {
+        flex-direction: column;
+        display: flex;
+        justify-content: center;
+        grid-template-columns: repeat(1, 50%);
+    }
+    
+  }
 
+  @media (max-width: 500px)  {
+    .Container {
+        flex-direction: column;
+        display: flex;
+        justify-content: center;
+        grid-template-columns: repeat(1, 50%);
+    }
+    
+  }
 
 @keyframes blink {
     0% {opacity: 1;}
