--- a/styles/aboutme.module.css
+++ b/styles/aboutme.module.css
@@ -1,5 +1,5 @@
 .main{
-    background-color: transparent !important;
+    background-color: #000;
     position: absolute;
     top:0 ;
     left:0;
